             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state
   - Bugfix: modify the configure script to have errors if popt or fam
             libraries not present
   - Sorted the contributors list
* Robert Sowada (adapted by Nicolas Rougier from v2.0.3 to v2.1.0)
   - Gnome version can determine itself if in standalone mode or panel mode
   - Removed "--gtk" option, added "--applet" option in debug mode instead
   - Added "--version" option to all versions of gnubiff
   - "--help" option handled by "poptPrintHelp" in all versions of gnubiff
   - Removed messages that are no longer necessary
   - Bugfix: Using <return> in password entry
   - Bugfix: return value of main
   - Output of "--help" restructured
   - Update of man page (command line options, version, date)
   - Bugfix: Failure of select command (IMAP)
   - Bugfix: Failure of opening connection (IMAP)
   - Security Bugfix: DoS attacks by sending unterminated lines anticipated
     (if SSL is used, this was fixed for non-SSL connections in 2.0.2)
   - Bugfix: Handling network writing/reading errors
   - Bugfix/Feature: Support for international Mailbox names for IMAP
   - Security Bugfix: DoS attacks by sending a unterminated response to the
     SELECT, SEARCH, FETCH (IMAP) and TOP (POP3) commands anticipated
   - Bugfix: User set value for maximum number of mail to be collected is now
     respected (IMAP)
   - Bugfix: Fetching mails is no longer stopped if certain strings are in
     mail or mail header (IMAP)
   - Bugfix: First lines of email content are now displayed (IMAP)
   - Bugfix: Displaying mails that do not end with a newline (IMAP)
   - Feature: Only get first "text/plain" part of mail, not the whole mail;
     don't get the whole part if it is very long (IMAP)