@@ -67,14 +67,21 @@ Pop3::~Pop3 (void)
 int
 Pop3::connect (void)
 {
-	// show authentication if password is empty
+	// First try: try to guess password by looking at other mailboxes
 	if (password_.empty())
-		ui_auth_->select (this);
+		password_ = biff_->password (this);
 
-	// if it is still empty after authentication, just return
+	// Second try: ask to the user
 	if (password_.empty()) {
-		socket_->status (SOCKET_STATUS_ERROR);
-		status_  = MAILBOX_ERROR;
+		gdk_threads_enter ();
+		ui_auth_->select (this);
+		gdk_threads_leave ();
+	}
+
+	// No way, user do not want to help us, we simply return
+	if (password_.empty()) {
+		status_ = MAILBOX_ERROR;
+		g_warning (_("[%d] Empty password"), uin_);
 		return 0;
 	}
 
