@@ -25,6 +25,10 @@ Version 2.1.0
    - Bugfix: modify the configure script to have errors if popt or fam
              libraries not present
    - Sorted the contributors list
+   - Feature: When adding a mailbox and if one is selected, the new mailbox is
+	      copied from the selected one
+   - Feature: If password is empty, gnubiff try to find by looking at
+              other mailboxes and matching (address/username)
 * Robert Sowada (adapted by Nicolas Rougier from v2.0.3 to v2.1.0)
    - Gnome version can determine itself if in standalone mode or panel mode
    - Removed "--gtk" option, added "--applet" option in debug mode instead
